# shortener

./: .gitignore  hie.yaml  package.yaml  shortener.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  Schema.hs  Shortener.hs
