cabal-version: 3.6.2.0

name: shortener
version: 0.1.0.0

common common
  build-depends:
      base >= 4.16
  default-language: Haskell2010
  ghc-options: -Wall

library
  import: common
  hs-source-dirs: src
  exposed-modules: Shortener
  build-depends:
      scotty >= 0.12

executable shortener
  import: common
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      shortener
